Table styling, matching design (#120)
* Matching Table header design

* Treat DisplayOptions modal as a root element

So it's always visible and not boxed in by it's parent

* Sidebar & Workspace layout tweaks

* TableToggle: match class names with component name

* Table positioning to allow horizontal scrolling

Let table data go full width, use overflow scrolling to see it all

* Make sure Collapsible icons don't move when Sidebar is iconified

--- a/src/components/Collapsible/CollapsibleHeader.scss
+++ b/src/components/Collapsible/CollapsibleHeader.scss
@@ -19,12 +19,9 @@
 
 .CollapsibleHeader-select {
   @include clampText;
-  padding: 5px;
-  padding-left: 10px;
 
   // reset padding when iconified so the icon can center
   &.isIconified {
-    padding: 5px;
     @include flexJustifyCenter;
   }
   &:hover { background-color: darken(#d8d8d8, 15%); }
@@ -32,11 +29,8 @@
 }
 
 .CollapsibleHeader-icon {
-  margin-right: 14px;
-  padding-bottom: 3px;
-  &.isIconified {
-    margin-right: 0;
-  }
+  height: 40px;
+  width: 40px;
 }
 
 .CollapsibleHeader-label {
