--- a/src/components/DisplayOptions/DisplayOptions.scss
+++ b/src/components/DisplayOptions/DisplayOptions.scss
@@ -1,7 +1,7 @@
 @import '../../styles/core-mixins.scss';
 
 .DisplayOptions {
-  position: absolute;
+  position: fixed;
   top: 15vh;
   left: 20vw;
   width: 60vw;
