--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -100,11 +100,11 @@
   }
 }
 
-.table-toggle {
+.TableToggle {
   background-color: #fff;
   margin: 10px;
 
-  .table-toggle-button {
+  .TableToggle-button {
     color: #000;
     width: 40px;
     height: 40px;
@@ -116,7 +116,7 @@
     &:hover { background-color: $zorroa-lightgray; }
   }
 
-  .table-toggle-enabled {
+  .TableToggle-enabled {
     color: #fff;
     background-color: $zorroa-sickly-green;
     &:hover { background-color: darken($zorroa-sickly-green, 15%); }
