Allow field toggle in pie chart when clicking on .Facet-pie-pct

--- a/src/components/Racetrack/Facet.scss
+++ b/src/components/Racetrack/Facet.scss
@@ -71,6 +71,8 @@
     .Facet-pie-pct {
       font-size: 9px;
       fill: white;
+      @include nosel;
+      pointer-events: none;
     }
 
     .Facet-pie-label {
