--- a/src/assets/fonts/zorroa-icons/style.css
+++ b/src/assets/fonts/zorroa-icons/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'zorroa-icons';
-  src:  url('fonts/zorroa-icons.eot?g6c3ru');
-  src:  url('fonts/zorroa-icons.eot?g6c3ru#iefix') format('embedded-opentype'),
-    url('fonts/zorroa-icons.woff2?g6c3ru') format('woff2'),
-    url('fonts/zorroa-icons.ttf?g6c3ru') format('truetype'),
-    url('fonts/zorroa-icons.woff?g6c3ru') format('woff'),
-    url('fonts/zorroa-icons.svg?g6c3ru#zorroa-icons') format('svg');
+  src:  url('fonts/zorroa-icons.eot?dj9f47');
+  src:  url('fonts/zorroa-icons.eot?dj9f47#iefix') format('embedded-opentype'),
+    url('fonts/zorroa-icons.woff2?dj9f47') format('woff2'),
+    url('fonts/zorroa-icons.ttf?dj9f47') format('truetype'),
+    url('fonts/zorroa-icons.woff?dj9f47') format('woff'),
+    url('fonts/zorroa-icons.svg?dj9f47#zorroa-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -25,6 +25,30 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-settings_backup_restore:before {
+  content: "\e92f";
+}
+.icon-plus2:before {
+  content: "\e928";
+}
+.icon-folder-subfolders:before {
+  content: "\e915";
+}
+.icon-folder-move:before {
+  content: "\e929";
+}
+.icon-folder-add:before {
+  content: "\e92a";
+}
+.icon-collections-simple:before {
+  content: "\e92b";
+}
+.icon-collections-smart:before {
+  content: "\e92d";
+}
+.icon-collections-add:before {
+  content: "\e92e";
+}
 .icon-checkbox-indetermined:before {
   content: "\e923";
 }
@@ -97,18 +121,6 @@
 .icon-browse:before {
   content: "\e914";
 }
-.icon-folder2:before {
-  content: "\e915";
-}
-.icon-directory2:before {
-  content: "\e915";
-}
-.icon-category2:before {
-  content: "\e915";
-}
-.icon-browse2:before {
-  content: "\e915";
-}
 .icon-pie-chart2:before {
   content: "\e90f";
 }
@@ -148,6 +160,9 @@
 .icon-bar-graph:before {
   content: "\e90a";
 }
+.icon-apartment:before {
+  content: "\e60c";
+}
 .icon-pencil:before {
   content: "\e60d";
 }
@@ -163,8 +178,20 @@
 .icon-game:before {
   content: "\e684";
 }
+.icon-star:before {
+  content: "\e68d";
+}
+.icon-star-empty:before {
+  content: "\e68f";
+}
+.icon-files:before {
+  content: "\e6b7";
+}
 .icon-folder3:before {
   content: "\e6ba";
+}
+.icon-folder-upload:before {
+  content: "\e6bf";
 }
 .icon-register:before {
   content: "\e6d1";
@@ -237,6 +264,9 @@
 }
 .icon-arrow-down2:before {
   content: "\e942";
+}
+.icon-arrow-divert:before {
+  content: "\e948";
 }
 .icon-layers:before {
   content: "\e977";
