David/table styling (#135)
* Add action & reducer for setting a field's Table column width & set default widths

* Freeze the table header & setup table body scrolling

* Separate Collapsibles in Left sidebar w/ padding, to match design

* Control field widths in Table component

Replace table element with divs, to allow size styling
The <table> is too difficult to control

* Synchronize Table-header horiz scrolling with Table-body

* Update appReducer test w/ initial table field width state

* Comment the table header horiz scroll trickery

* Add reducer test for SET_TABLE_FIELD_WIDTH action

Define & export defaultTableFieldWidth from appReducer

--- a/src/components/Collapsible/CollapsibleHeader.scss
+++ b/src/components/Collapsible/CollapsibleHeader.scss
@@ -1,5 +1,11 @@
 @import '../../styles/core-mixins.scss';
 
+.Collapsible {
+  .scroller > & {
+    margin-bottom: 3px;
+  }
+}
+
 .CollapsibleHeader {
   @include nowrap;
   height: 40px;
