--- a/src/styles/core-mixins.scss
+++ b/src/styles/core-mixins.scss
@@ -162,6 +162,13 @@ $zorroa-Sidebar-width : 340px;
     flex-wrap: wrap;
 }
 
+@mixin flexNoWrap {
+    -webkit-flex-wrap: no-wrap;
+    -moz-flex-wrap: no-wrap;
+    -ms-flex-wrap: no-wrap;
+    flex-wrap: no-wrap;
+}
+
 @mixin flexOn  { -webkit-box-flex : 1 1 auto ; -moz-box-flex : 1 1 auto; -webkit-flex : 1 1 auto ; -ms-flex : 1 1 auto; flex : 1 1 auto; }
 @mixin flexOff { -webkit-box-flex : 0 0 auto ; -moz-box-flex : 0 0 auto; -webkit-flex : 0 0 auto ; -ms-flex : 0 0 auto; flex : 0 0 auto; }
 
