--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -34,6 +34,34 @@
 
 .header-menu {
   margin-left: 20px;
+
+  a:hover {
+    color: $zorroa-sickly-green;
+  }
+
+  .export {
+    @include flexRow;
+    @include flexAlignItemsCenter;
+    white-space: nowrap;
+    color: $zorroa-greyish-brown;
+    text-transform: uppercase;
+
+    div {
+      margin-left: 8px;
+    }
+
+    &:not(.disabled):hover {
+      color: $zorroa-sickly-green;
+    }
+
+    &.disabled {
+      color: $zorroa-lightgray;
+    }
+  }
+
+  .DropdownMenu-item:hover {
+    background-color: transparent;
+  }
 }
 
 .header-menu-icon {
@@ -46,10 +74,36 @@
   display: list-item;
   text-align: -webkit-match-parent;
   text-align: match-parent;
-  text-transform: uppercase;
   text-decoration: none;
   font-size: 14px !important;
   white-space: nowrap;
+
+  @include flexRow;
+  @include flexJustifySpaceBetween;
+  @include flexAlignItemsCenter;
+
+  div {
+    margin-left: 8px;
+  }
+
+  .title {
+    text-transform: uppercase;
+  }
+
+  &:not(.disabled):hover {
+    color: $zorroa-sickly-green;
+  }
+
+  &.disabled {
+    color: $zorroa-lightgray;
+  }
+
+  .job-state {
+    font-size: 10px;
+    margin-right: 8px;
+    margin-left: 20px;
+    text-transform: capitalize;
+  }
 
   button {
     -webkit-user-select: none;
