--- a/src/components/Racetrack/Racetrack.scss
+++ b/src/components/Racetrack/Racetrack.scss
@@ -61,6 +61,10 @@
     padding: 0;
     margin: 40px 0;
 
+    @include flexRow;
+    @include flexAlignItemsCenter;
+    @include flexJustifyCenter;
+
     .Racetrack-add-filter-item {
       margin-top: 4px;
     }
@@ -68,11 +72,19 @@
     button {
       height: 40px;
       padding: 0 12px;
-      font-weight: 500;
+      font-size: 14px;
+      font-weight: 700;
       background-color: $zorroa-greyish-brown;
       color: $zorroa-nearwhite;
       border-radius: 3px;
       border: none;
+      margin-right: 12px;
+
+      div {
+        font-weight: 700;
+        text-transform: uppercase;
+        margin-left: 6px;
+      }
 
       &:hover {
         background-color: #a5a5a5;
@@ -87,17 +99,10 @@
       }
     }
 
-    .Racetrack-add-quick {
-      height: 40px;
-      padding: 0 8px;
-      border-radius: 3px;
-      border: 1px solid #a5a5a5;
-      font-size: 14px;
-      font-weight: 500;
-    }
-
     .Racetrack-add-widget {
       @include clampText;
+      @include flexRow;
+      @include flexAlignItemsCenter;
       text-transform: uppercase;
       color: white;
       height: 30px;
