Add PDF load progress. [Finishes #134796653] (#137)

--- a/src/components/Inspector/Pdf.scss
+++ b/src/components/Inspector/Pdf.scss
@@ -4,10 +4,14 @@
   @include fullHeight;
   @include flexCol;
   @include flexAlignItemsCenter;
+  @include flexJustifyCenter;
 
   img.loading {
-    @include flexOn;
-    align-self: center;
+  }
+
+  .error {
+    color: $zorroa-faded-red;
+    font-size: 18px;
   }
 
   .body {
