--- a/src/components/Racetrack/Map.scss
+++ b/src/components/Racetrack/Map.scss
@@ -1,6 +1,7 @@
 @import '../../styles/core-mixins.scss';
 
 .Map {
+  position: relative;
 
   .WidgetHeader {
     color: $zorroa-nearwhite;
@@ -26,6 +27,26 @@
     div[class*="icon-"] {
       margin-left: 4px;
       margin-right: 4px;
+    }
+  }
+
+  .selected-term {
+    position: absolute;
+    top: 44px;
+    left: 4px;
+    font-size: 10px;
+    color: black;
+    background-color: rgba(256,256,256,0.5);
+    line-height: 1.5em;
+    padding-left: 4px;
+    padding-right: 4px;
+
+    @include flexRow;
+    @include flexAlignItemsCenter;
+
+    .icon-cancel-circle {
+      font-size: 10px;
+      margin-left: 4px;
     }
   }
 }
