AddWidget modal. [Finishes #132394753][Finishes #132395309]

--- a/src/components/Racetrack/Facet.scss
+++ b/src/components/Racetrack/Facet.scss
@@ -3,8 +3,6 @@
 .Facet {
   .WidgetHeader {
     color: $zorroa-nearwhite;
-    background-color: $zorroa-darkish-purple;
-    & > *:hover { background-color: darken($zorroa-darkish-purple, 15%); }
   }
 
   .WidgetHeader-icon {
@@ -16,6 +14,10 @@
   }
 
   .Facet-header {
+    @include flexRow;
+    @include flexJustifySpaceBetween;
+    @include fullWidth;
+
     flex-shrink: 1;
     span {
     }
