--- a/src/components/Racetrack/Map.scss
+++ b/src/components/Racetrack/Map.scss
@@ -5,8 +5,6 @@
 
   .WidgetHeader {
     color: $zorroa-nearwhite;
-    background-color: $zorroa-water-blue;
-    & > *:hover { background-color: darken($zorroa-water-blue, 15%); }
   }
 
   .WidgetHeader-icon {
@@ -24,6 +22,10 @@
   }
 
   .Map-header {
+    @include flexRow;
+    @include flexJustifySpaceBetween;
+    @include fullWidth;
+
     div[class*="icon-"] {
       margin-left: 4px;
       margin-right: 4px;
