--- a/src/components/Racetrack/QuickAddWidget.scss
+++ b/src/components/Racetrack/QuickAddWidget.scss
@@ -6,6 +6,7 @@
   .QuickAddWidget-list {
     position: absolute;
     top: 110%;
+    right: 0;
     background-color: white;
     border-radius: 3px;
     box-shadow: 0 2px 6px 6px rgba(0,0,0, 0.15);
@@ -14,7 +15,6 @@
     padding-top: 6px;
     padding-bottom: 12px;
     z-index: 1000;
-    //right: 100%;
 
     .QuickAddWidget-item {
       @include clampText;
@@ -31,6 +31,10 @@
       &.selected {
         border: 3px solid $zorroa-gray;
       }
+
+      &:hover {
+        border: 3px solid $zorroa-gray;
+      }
     }
   }
 
@@ -42,21 +46,6 @@
     font-size: 14px;
     font-weight: 500;
   }
-}
-
-.QuickAddWidget-SIMPLE_SEARCH {
-  background-color: $zorroa-sickly-green;
-  &:hover { background-color: darken($zorroa-sickly-green, 15%); }
-}
-
-.QuickAddWidget-FACET {
-  background-color: $zorroa-darkish-purple;
-  &:hover { background-color: darken($zorroa-darkish-purple, 15%); }
-}
-
-.QuickAddWidget-MAP {
-  background-color: $zorroa-water-blue;
-  &:hover { background-color: darken($zorroa-water-blue, 15%); }
 }
 
 .QuickAddWidget-item-icon {
