Fix Assets layout issues in Firefox (#150)
* Fix Assets layout issues in Firefox

Remove unused flexOff from assets-container
Fix menu item wrapping in Firefox

For some reason unknown to me,
<button> is not responding to wrap styles in Firefox

Simplify Assets wrapper

* De-lint

* Fix add widget & quick add widget buttons in firefox

* Replace Object.values() with Object.keys(...).map(...); not portable yet.

--- a/src/components/Assets/Assets.scss
+++ b/src/components/Assets/Assets.scss
@@ -1,8 +1,10 @@
 @import '../../styles/core-mixins.scss';
 
-.assets-container {
-  overflow: hidden;
-  max-width: 100%;
+.Assets {
+  @include flexOn;
+  @include flexCol;
+  @include fullHeight;
+  @include fullWidth;
 }
 
 .assets-scroll {
