--- a/src/components/Workspace/Workspace.scss
+++ b/src/components/Workspace/Workspace.scss
@@ -8,11 +8,11 @@
   flex: 1;
 
   // This is a full screen (viewport) app
-  height: 100vh;
-  width: 100vw;
   position: fixed;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 // Allow the workspace to fill the full height of App
