--- a/src/assets/fonts/zorroa-icons/style.css
+++ b/src/assets/fonts/zorroa-icons/style.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'zorroa-icons';
-  src:  url('fonts/zorroa-icons.eot?dj9f47');
-  src:  url('fonts/zorroa-icons.eot?dj9f47#iefix') format('embedded-opentype'),
-    url('fonts/zorroa-icons.woff2?dj9f47') format('woff2'),
-    url('fonts/zorroa-icons.ttf?dj9f47') format('truetype'),
-    url('fonts/zorroa-icons.woff?dj9f47') format('woff'),
-    url('fonts/zorroa-icons.svg?dj9f47#zorroa-icons') format('svg');
+  src:  url('fonts/zorroa-icons.eot?aovw88');
+  src:  url('fonts/zorroa-icons.eot?aovw88#iefix') format('embedded-opentype'),
+    url('fonts/zorroa-icons.woff2?aovw88') format('woff2'),
+    url('fonts/zorroa-icons.ttf?aovw88') format('truetype'),
+    url('fonts/zorroa-icons.woff?aovw88') format('woff'),
+    url('fonts/zorroa-icons.svg?aovw88#zorroa-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -30,6 +30,9 @@
 }
 .icon-plus2:before {
   content: "\e928";
+}
+.icon-removeasset:before {
+  content: "\e932";
 }
 .icon-folder-subfolders:before {
   content: "\e915";
@@ -70,7 +73,22 @@
 .icon-question:before {
   content: "\e910";
 }
+.icon-film:before {
+  content: "\e931";
+}
+.icon-video:before {
+  content: "\e931";
+}
+.icon-movie:before {
+  content: "\e931";
+}
+.icon-tape:before {
+  content: "\e931";
+}
 .icon-play:before {
+  content: "\e931";
+}
+.icon-play2:before {
   content: "\e921";
 }
 .icon-calendar:before {
@@ -184,6 +202,12 @@
 .icon-star-empty:before {
   content: "\e68f";
 }
+.icon-envelope:before {
+  content: "\e696";
+}
+.icon-file-empty2:before {
+  content: "\e6b3";
+}
 .icon-files:before {
   content: "\e6b7";
 }
@@ -207,6 +231,9 @@
 }
 .icon-contacts:before {
   content: "\e71a";
+}
+.icon-telephone:before {
+  content: "\e76a";
 }
 .icon-window:before {
   content: "\e7b2";
