--- a/src/components/Metadata/Metadata.scss
+++ b/src/components/Metadata/Metadata.scss
@@ -29,7 +29,7 @@
     .icon-cog {
       color: $zorroa-gray;
 
-      :hover {
+      &:hover {
         color: $zorroa-sickly-green;
       }
     }
