--- a/src/components/DisplayOptions/DisplayOptions.scss
+++ b/src/components/DisplayOptions/DisplayOptions.scss
@@ -21,11 +21,9 @@
   .DisplayOptions-header {
     color: white;
     background-color: black;
-    padding: 5px 20px;
     font-size: 14px;
     font-weight: 500;
     text-transform: uppercase;
-    margin-right: 4px;
     min-height: 40px;
     max-height: 40px;
 
@@ -41,6 +39,15 @@
       margin-right: 10px;
     }
 
+    .DisplayOptions-settings {
+      @include flexRowCenter;
+      width: 40px;
+      height: 40px;
+      &:hover {
+        background-color: $zorroa-darkgray;
+      }
+    }
+
     .DisplayOptions-title {
       margin-left: 5px;
     }
@@ -50,6 +57,15 @@
       text-transform: none;
       margin-right: 50px;
       margin-left: 6px;
+    }
+
+    .DisplayOptions-close {
+      @include flexRowCenter;
+      width: 40px;
+      height: 40px;
+      &:hover {
+        background-color: $zorroa-darkgray;
+      }
     }
 
     /* The switch - the box around the slider */
