--- a/src/components/Racetrack/WidgetHeader.scss
+++ b/src/components/Racetrack/WidgetHeader.scss
@@ -2,6 +2,7 @@
 
 .WidgetHeader {
   @include nowrap;
+  width: 100%;
   height: 40px;
   text-transform: uppercase;
   font-weight: 100;
@@ -15,8 +16,18 @@
   .Widget.isOpen.isIconified & { border-radius: 3px; }
 }
 
+.WidgetHeader-hover {
+  @include flexCenter;
+  @include flexAlignItemsCenter;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: transparent;
+  &:hover { background-color: rgba(0,0,0,0.2); }
+}
+
 .WidgetHeader-toggle {
-  padding: 5px;
   padding-left: 10px;
 }
 
@@ -37,6 +48,7 @@
 .WidgetHeader-close {
   width: 40px;
   height: 40px;
+  &:hover { background-color: rgba(0,0,0,0.2); }
 }
 
 .WidgetHeader-caret {
